--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@
 body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-image: url(../images/white-waves.png);
-    width: 100%;
 }
 
 h1, h2 {
@@ -44,19 +43,32 @@ h1, h2 {
 #name {
     text-align: center;
     color: #ffffff;
+    margin-top: 27px;
+    margin-bottom: 27px;
 }
 
 .navLinkBox {
     height: 100%;
+    margin: 0 auto;
 }
 
 .navLinks {
     float: right;
+    vertical-align: middle;
+    margin: 33.5px 0 33.5px 0;
 }
 
 a {
-    color: #cccccc; 
+    color: #777777; 
     text-decoration: none;
+    font-size: 19px;
+}
+
+li:nth-of-type(2) {
+    margin: 0 15px 0 15px;
+    padding: 0 15px 0 15px;
+    border-left: 1px solid rgba(119, 119, 119, 0.3);
+    border-right: 1px solid rgba(119, 119, 119, 0.3);
 }
 
 li {
@@ -64,7 +76,35 @@ li {
 }
 
 .main {
-    max-width: 960px;
+    width: 900px;
     margin: 0 auto;
-    margin-top: 180px;
+    margin-top: 133px;
+    background-color: #ffffff;
+    padding: 18px 28px 28px 28px;
+    border: 1px solid #dddddd;
+    overflow: auto;
+}
+
+.aboutMe {
+    color: #4aaaa5;
+    font-size: 32px;
+}
+
+hr {
+    margin-bottom: 27.92px;
+    border: 1.5px solid #dddddd;
+}
+
+#image {
+    float: left;
+    padding-top: 5px;
+}
+
+#paragraph {
+    width: 75%;
+    float: right;
+    font-size: 1.2em;
+    color: #777777;
+    line-height: 1.8em;
+    margin: 0;
 }
