--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-image: url(../images/white-waves.png);
+    height: 960px;
 }
 
 h1, h2 {
@@ -136,14 +137,35 @@ hr {
     font-size: 13px;
 }
 
-.linkBlock {
-    margin: 0 auto;
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.pLink {
-    margin-right: 33px;
+.pLink1, .pLink2, .pLink3 {
+    margin-bottom: 25px;
 }
 
-img:nth-of-type(4) {
-    margin-right: 0;
+.pLink1 {
+    margin-right: 16px;
+}
+
+.pLink2 {
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+.pLink3 {
+    margin-left: 16px;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background-color: #777777;
+    border-top: 5px solid #4aaaa5;
 }
